# gridcast

./: .env.postgres.example  .gitignore  ATTRIBUTION.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: review-agent.md
.claude/commands/: review-fn.md  review.md
dashboard/: app.py  test_app.py
db/: schema.sql
features/: views.sql
ingestion/: entsoe_loader.py  openmeteo_loader.py  utils.py
models/: evaluate.py  features.py  persistence.py  plot.py  train.py  train_linear.py  train_neural.py  train_random_forest.py  train_transformer.py  utils.py
review/: domain.md  intent.md  leakage.md  quality.md
tests/: test_evaluation.py  test_features.py  test_persistance.py  test_utils.py
